--- a/bolt.yaml
+++ b/bolt.yaml
@@ -8,11 +8,18 @@ tools: [{ golang: "1.24.3" }]
 # Load environment variables from .env files
 dotenv: [.env]
 # Setup commands to run during 'bolt up'
-up: []
+up:
+  - go install github.com/golangci/golangci-lint/v2/cmd/golangci-lint@latest
+  - go install gotest.tools/gotestsum@latest
 # Custom commands, run like 'bolt dev'
 cmds:
-  # Start the development server
-  hello-world:
-    desc: "Print 'Hello, World!'"
+  test:
+    desc: "Test go-agents"
     steps:
-      - echo "Hello, World!"
+      - sh: gotestsum --format pkgname-and-test-fails --hide-summary=skipped {{default "./..." .args}}
+  check:
+    desc: "Format, lint, and test"
+    steps:
+      - go fmt ./...
+      - golangci-lint run
+      - cmd: test
